# av-diarization

./: .gitignore  LICENSE  README.md  diarize.py  pyproject.toml
models/: speakermodel.py
voxconverse/: __init__.py  avdiarizer.py  diarizer.py  facecluster.py  preprocessor.py  speakernet.py  syncnet.py  utils.py  vad.py  visualize.py
voxconverse/models/: box_utils.py  resnetse34v2.py  s3fd.py  syncnetmodel.py  vggface.py
