[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "av-diarization"
version = "1.0.0"
description = "Audio-visual diarization code used for VoxConverse"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch==2.4.0", "webrtcvad", "numpy", "scipy", 
    "speechbrain", "scikit-learn", "torchaudio==2.4.0", 
    "scenedetect==0.6.5", "wave", "python-speech-features",
    "opencv-python", "tqdm", "pysoundfile"
]

[project.urls]
"Homepage" = "https://mm.kaist.ac.kr/datasets/voxconverse/"
"Bug Tracker" = "https://github.com/JaesungHuh/av-diarization/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "cache*", "models*", "output*", "sample*", "voxconverse*"]

[tool.wheel]
exclude = ["assets*", "cache*", "models*", "output*", "sample*", "voxconverse*"]